# ai-driven-development-sample

./: .gitignore  .mcp.json  AGENTS.md  README.md  biome.json  mise.toml  package.json
.agent/commands/: issue-plan.md  pr-create.md  task-done.md
.agent/rules/: branch-strategy.md  frontend-patterns.md  frontend-structure.md  review-checklist.md  testing.md
.agent/templates/: PLAN.md  TASK.md
.claude/commands/: done.md  issue-create.md  issue-plan.md  pr-create.md  pr.md  task-done.md  task-run.md
.claude/issue-templates/: bug.md  docs.md  enhancement.md  task.md  user-story.md
.claude/rules/: branch-strategy.md  coding-work.md  directory-structure.md  frontend-structure.md  packages-structure.md  tdd.md  worktree.md
.codex/rules/: commit.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.serena/: project.yml
docs/: ai-driven-development-quickstart.md  ai-driven-development-setup.md  application-architecture.drawio  application-architecture.md  architecture-application-layer.md  architecture-application-patterns.md  architecture-command-query-bus.md  architecture-contracts-modules.md  architecture-core-infrastructure.md  architecture-server-handler-types.md  devcontainer-setup.md  development-environment.md  frontend-architecture.md  setup_application_architecture.md
supabase/: config.toml
tools/aidd/: Cargo.toml  README.md  aidd.sh
tools/aidd/src/: cli.rs  frontmatter.rs  helpers.rs  main.rs
tools/aidd/src/commands/: deploy.rs  issue.rs  mod.rs  pr.rs  status.rs  task.rs  wt.rs
tools/aidd/tests/: cli_test.rs
(+94 files in other folders)
