[package]
name = "aidd"
version = "0.1.0"
edition = "2021"
description = "AI-Driven Development CLI"

[[bin]]
name = "aidd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
